# ml-study

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  task.md
EV-Battery-Parking-Degradation-Mitigation/: 24locations.py  cluster.ipynb  clustering_comparison_map.html  dbscan_clustering_map.html  final_charging_parking_routes.html  hdbscan_clustering_map.html  lonations.py  main.ipynb  network2.py  network3.py  plot.py  plot_network.py  rime_locations.py  run_session_test.py  sample_cluster.ipynb  session_detector.py  usage_example.py  vehicle_000_clustering_map.html  vehicle_001_clustering_map.html  vehicle_002_clustering_map.html  vehicle_003_clustering_map.html  vehicle_004_clustering_map.html
EV-Battery-Parking-Degradation-Mitigation/chatgpt/: hybrid_parking_preprocess.py  hybrid_parking_preprocess_template.py  requirements.md  session_detector.py
EV-Battery-Parking-Degradation-Mitigation/docs/: data.md  test_plan.md  test_plan_final.md
EV-Battery-Parking-Degradation-Mitigation/eda/: eda_ev_parking_behavior.ipynb  eda_ev_parking_behavior.py  ranking_predict.md  train.py  データ抽出Step.md
EV-Battery-Parking-Degradation-Mitigation/eda2/: eda2_analysis.ipynb  eda2_pipeline.py  eda2要件.md
ml-venv/: pyvenv.cfg
nyc-taxi-trip-duration/: .gitignore  main.ipynb
scikit_learn_onnx_repo/: onnx.py
scikit_learn_onnx_repo/docs/: 03_C++推論実行手順.md  (+2 more)
scikit_learn_onnx_repo/sample_onnx_ubuntu_test/cpp_inference/: CMakeLists.txt  README.md  onnx_inference.cpp  setup_and_build.sh
(+89 files in other folders)
