[project]
name = "ml-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "skl2onnx>=1.19.1",
    "statsmodels>=0.14.5",
]
